--- a/gamehouse/css/style.css
+++ b/gamehouse/css/style.css
@@ -250,9 +250,9 @@ header {
   z-index: 1;
   width: 100%;
   height: 680px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(32, 33, 36, 0.2)), to(rgba(32, 33, 36, 0.5))), url(../img/bg6.jpg) center/100% no-repeat fixed;
-  background: -o-linear-gradient(rgba(32, 33, 36, 0.2), rgba(32, 33, 36, 0.5)), url(../img/bg6.jpg) center/100% no-repeat fixed;
-  background: linear-gradient(rgba(32, 33, 36, 0.2), rgba(32, 33, 36, 0.5)), url(../img/bg6.jpg) center/100% no-repeat fixed;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(32, 33, 36, 0.2)), to(rgba(32, 33, 36, 0.5))), url(../img/bg6.webp) center/100% no-repeat fixed;
+  background: -o-linear-gradient(rgba(32, 33, 36, 0.2), rgba(32, 33, 36, 0.5)), url(../img/bg6.webp) center/100% no-repeat fixed;
+  background: linear-gradient(rgba(32, 33, 36, 0.2), rgba(32, 33, 36, 0.5)), url(../img/bg6.webp) center/100% no-repeat fixed;
 }
 
 .main .content {
@@ -277,8 +277,8 @@ header {
 }
 
 .more-duels {
-  -webkit-animation-duration: 2.5s;
-          animation-duration: 2.5s;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, #424242 0px 0px 0px 3px;
           box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, #424242 0px 0px 0px 3px;
   margin: 14px auto;
