--- a/gamehouse/css/style.css
+++ b/gamehouse/css/style.css
@@ -3,6 +3,7 @@
   src: url(../fonts/Roboto-Bold.ttf) format("truetype");
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url(../fonts/Roboto-Medium.ttf) format("truetype");
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url(../fonts/Roboto-Regular.ttf) format("truetype");
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
 }
 
 body {
