--- a/gamehouse/css/style.css
+++ b/gamehouse/css/style.css
@@ -279,7 +279,9 @@ header {
   z-index: 1;
   width: 100%;
   height: 680px;
-  background: url(../img/bg6.webp) center/100% no-repeat fixed;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(32, 33, 36, 0.2)), to(rgba(32, 33, 36, 0.5))), url(../img/bg6.webp) center/100% no-repeat fixed;
+  background: -o-linear-gradient(rgba(32, 33, 36, 0.2), rgba(32, 33, 36, 0.5)), url(../img/bg6.webp) center/100% no-repeat fixed;
+  background: linear-gradient(rgba(32, 33, 36, 0.2), rgba(32, 33, 36, 0.5)), url(../img/bg6.webp) center/100% no-repeat fixed;
 }
 
 .main .content {
